[package]
name = "kvs"
version = "0.1.0"
authors = ["lianxm <lianxm2@gmail.com>"]
description = "A key-value store"
edition = "2021"

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
thiserror = "1"
serde = { version = "1.0.89", features = ["derive"] }
serde_json = "1.0.39"

[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
